[tool.poetry]
name = "gov_au_analyse"
version = "0.1.0"
description = ""
authors = ["Belinda Wang <belinda.wang@proptrack.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
